# dd-defense

./: .env.example  .gitignore  AGENTS.md  AIRTABLE_SETUP.md  INBOX_SETUP.md  README.md  pyproject.toml  railway.json  requirements.txt
.github/workflows/: daily-prospects.yml  send-outreach.yml
agent-worker/: README.md  wrangler.jsonc
agent-worker/src/: index.js
dd_defense/: __init__.py  airtable_setup.py  airtable_sync.py  audit.py  auth.py  batch.py  calendars.py  cli.py  evidence_sources.py  extract.py  inbox.py  letter.py  outreach.py  pdfout.py  pipeline.py  report.py  rules.py  schema.py  store.py  util.py  validators.py  webapp.py  webpreview.py
dd_defense/airtable/: __init__.py  cleanup.py  client.py  send.py  setup.py  sync.py
deploy/: __init__.py  daily-prospects.py  scheduler.py  send-daemon.py  start.py
deploy/agent-worker/: package-lock.json  package.json
deploy/lead-worker/: worker.js  wrangler.toml
docs/: GTM-playbook.docx  cash-flow-model.xlsx  dd-research-comprehensive.md  go-to-market.md  legal-review-packet.docx
outreach/: prospect-tracker.xlsx  prospects-real.csv  prospects-sample.csv  prospects-segments.csv
samples/: sample_evidence.json  sample_parsed_invoice.json
scripts/: make_mock_invoice.py  migrate_cases.py  scheduler.py  start.py
site/: README.md  index.html
site/functions/api/: lead.js
site/public/: _worker.js  index.html
tests/: test_airtable.py  test_audit.py  test_auth.py  test_batch.py  test_pdfout.py  test_pipeline.py  test_robustness.py  test_store.py  test_validators.py  test_webapp.py
